# five-nights-at-the-forest

./: .env.example  .gitignore  Anchor.toml  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
prisma/: schema.prisma  seed.ts
programs/forest/: Cargo.toml
programs/forest/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/admin/: page.tsx
src/app/api/airdrop/: route.ts
src/app/api/leaderboard/: route.ts
src/app/api/referral/: route.ts
src/app/api/score/: route.ts
src/app/leaderboard/: page.tsx
src/app/play/: page.tsx
src/components/: GameCanvas.tsx  WalletButton.tsx
src/game/: ForestScene.ts  README.md  VoxelForest.ts  noise.ts  sprites.ts
src/lib/: airdrop.ts  score.ts  solana.ts
